# lora_training

./: .gitignore  eval.py  gen.py  ifeval_logs.jsonl  ifeval_logs2.jsonl  instruct_lm_inference.py  instruct_lm_trainer.py  pre-commit-config.yaml  pyproject.toml  setup.py  test.py  train.py
configs/: a100_config.yaml  a100_ddp_config.yaml  a100_fsdp_config.yaml  a100_zero3_config.yaml  a6000_config.yaml  cpu_train.yaml  ds_config.yaml  h100_config.yaml  h100x6_config.yaml  llama2_train_config.yaml  llama31_train_config.yaml  llama3_train_config.yaml  phi35_task1.yaml  phi35_task2.yaml  phi35_task3.yaml  phi35_task4.yaml  phi35_train_config.yaml  task1.yaml  task3.yaml
configs/discard/: general_train_config.yaml  mistral_v3.yaml  task2.yaml  task3.yaml  task4.yaml
configs/instruct_lm_llama3/: config.yaml  config_v2.yaml  lora_transform.yaml
configs/llama2/: task1.yaml  task2.yaml  task3.yaml  task4.yaml
configs/llama3/: task1.yaml  task2.yaml  task3.yaml  task4.yaml
configs/llama3_1/: task1.yaml  task2.yaml  task3.yaml  task4.yaml
configs/mistral7b_v03/: task1.yaml  task2.yaml  task3.yaml  task4.yaml
generations/: eval_results_loose.jsonl  eval_results_strict.jsonl  ifeval_logs_llama3_to_llama3.jsonl  ifeval_logs_llama3_to_llama31.jsonl
scripts/: eval.sh  llama2.sh  llama3.sh  run_all.sh
src/: cmd_parser.py  common.py  data_utils.py  data_utils_test.py  permute_utils.py  permute_utils_test.py
tools/: custome_llama.py  download_flan.py  download_model.py  generate_fineweb_subset.py  permute_lora_weights.py  update_instruct_lm_lora.py
(+33 files in other folders)
