[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lora_transfer"
version = "0.1.0"
description = "LoRA transfer project"
authors = ["Bairu Hou <bairu@ucsb.eud>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hbr690188270/lora_training"
packages = [
    { include = "src" },
    { include = "tools" }
]


[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
mypy = "^0.910"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
# Define the Python version for which you are targeting
target-version = "py39"  # Python 3.9

# Specify which error codes to ignore
ignore = ["E501"]  # Example: ignore line length

# Maximum allowed line length (optional)
line-length = 100

# Enable autofix options
fix = true

# Add or exclude certain rules, you can also define custom rules
select = ["E", "F", "W", "I", "F401", "F821"]  # Example for selecting error codes

# Exclude certain files or directories from linting
exclude = ["build", "dist"]
